gas/ 	PR 4448 	* config/tc-ppc.c (ppc_insert_operand): Don't increase min for 	PPC_OPERAND_PLUS1. include/opcode/ 	* ppc.h (PPC_OPERAND_PLUS1): Update comment.